Implement crdt Map route, model, controller, template
    - Refactor object's contents for display logic
    - Collect map fields by type
    - Implement remove registers functionality
    - Implement Add Register functionality

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -154,6 +154,11 @@ tr:nth-child(odd) {background: #EEE}
     font-size: 110%;
 }
 
+.field-label {
+    text-align: right;
+    font-weight: bold;
+}
+
 .form-inline .input-increment {
     width: 5em;
     vertical-align: middle;
