--- a/app/templates/components/link/link-object.hbs
+++ b/app/templates/components/link/link-object.hbs
@@ -8,6 +8,9 @@
         {{#if obj.bucket.props.isSet}}
             {{#link-to 'riak-object.set' obj}}{{obj.key}}{{/link-to}}
         {{/if}}
+        {{#if obj.bucket.props.isMap}}
+            {{#link-to 'riak-object.map' obj}}{{obj.key}}{{/link-to}}
+        {{/if}}
     {{else}}
         {{#link-to 'riak-object' obj}}{{obj.key}}{{/link-to}}
     {{/if}}
