Implement display and editing of recursive Map fields
- Implement Flag section of edit map
- Implement initial displays of embedded Counters, Sets and Maps
- Refactor set controllers, move registers logic to map controller
- Wire up removeSet, removeFlag, removeCounter buttons
- Wire up 'remove map' button
- Edit nested set WIP
- Refactor bucket props is* methods
- Implement add/remove nested set elements
- Refactor, wire up Remove Field
- Implement displaying nested recursive maps
- Implement editing of recursive nested map fields

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -142,6 +142,7 @@ tr:nth-child(odd) {background: #EEE}
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
     border-right: 1px solid #ddd;
+    margin-bottom: 1.5em;
 }
 .set-contents-list div.set-element-row:nth-child(even) {
     background-color: #eee;
@@ -157,6 +158,10 @@ tr:nth-child(odd) {background: #EEE}
 .field-label {
     text-align: right;
     font-weight: bold;
+}
+
+.map-composite-field-name {
+    padding: 0.5em 0px;
 }
 
 .form-inline .input-increment {
