--- a/app/templates/components/object-contents-map.hbs
+++ b/app/templates/components/object-contents-map.hbs
@@ -10,12 +10,34 @@
         </div>
         <div class="object-contents-body">
             <form class="form-inline">
-                {{object-contents-registers model=model}}
+                {{object-contents-registers model=model
+                    addField="addField"
+                    editField="editField"
+                    removeField="removeField"}}
             </form>
 
-          {{#if model.contentsForDisplay}}
-          <code>{{model.contentsForDisplay}}</code>
-          {{/if}}
+            <form class="form-inline">
+                {{object-contents-flags model=model
+                    removeField="removeField"}}
+            </form>
+
+            <form class="form-inline">
+                {{object-contents-counters-embedded model=model
+                    removeField="removeField"}}
+            </form>
+
+            <form class="form-inline">
+                {{object-contents-sets-embedded model=model
+                    addElement="addElement"
+                    removeElement="removeElement"}}
+            </form>
+
+            <form class="form-inline">
+                {{object-contents-maps-embedded model=model
+                    removeField="removeField" addField="addField" editField="editField"
+                    addElement="addElement" removeElement="removeElement"
+                  }}
+            </form>
         </div>
         <div class="object-contents-footer">
             <strong>Page loaded:</strong> {{model.metadata.dateLoaded}}
