--- a/app/templates/components/object-contents-registers.hbs
+++ b/app/templates/components/object-contents-registers.hbs
@@ -5,7 +5,7 @@
         <div class="row set-element-row">
             <div class="col-md-1">
                 <button type="button" class="btn btn-xs btn-danger"
-                      {{action 'removeRegister' model register}}>
+                      {{action 'removeField' model register}}>
                   <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                 </button>
             </div>
@@ -14,7 +14,7 @@
             </div>
             <div class="col-md-8">
                 <button type="button" class="btn btn-xs btn-primary"
-                      {{action 'editRegister' model register}}>
+                      {{action 'editField' model register}}>
                   <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 </button>
                 <code>
@@ -31,7 +31,7 @@
         <div class="col-md-8">
             {{input value=fieldToAddValue class="form-control" placeholder="value"}}
             <button type="button" class="btn btn-sm btn-primary"
-                    {{action 'addRegister' model}}>
+                    {{action 'addField' model}}>
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 Add Register</button>
         </div>
