--- a/app/templates/components/loading-spinner.hbs
+++ b/app/templates/components/loading-spinner.hbs
@@ -1,8 +1,4 @@
-<div class="center-block text-center loading">
-    <div class="container">
-    Loading...
-    </div>
-    <div class="container spinner">
-    <img src="assets/images/ajax-loading-big.gif" />
-    </div>
+<div class="spinner">
+  <div class="double-bounce1"></div>
+  <div class="double-bounce2"></div>
 </div>
