Error views template update

--- a/app/templates/error/unknown.hbs
+++ b/app/templates/error/unknown.hbs
@@ -1,5 +1,3 @@
-<div class="container text-center">
-    <h3>An unknown error has occurred</h3>
-
-    <p>Consider opening a bug report.</p>
-</div>
+{{#dashboard-module label='An unknown error has occurred'}}
+  <p>Consider opening a bug report.</p>
+{{/dashboard-module}}
