--- a/app/templates/error/cluster-not-found.hbs
+++ b/app/templates/error/cluster-not-found.hbs
@@ -1,12 +1,3 @@
-<div class="container text-center">
-    <h2>404 Cluster Not Found</h2>
-
-    <div class="container">
-        <div class="row">
-            The cluster id you requested was not found:
-            <div>
-            <strong>{{model.clusterId}}</strong>
-            </div>
-        </div>
-    </div>
-</div>
+{{#dashboard-module label='404 Cluster Not Found'}}
+  <p>The cluster id you requested was not found</p>
+{{/dashboard-module}}
