Index, loading, and Riak-ping view templates

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,4 @@
-Select cluster from the nav bar on the left.
+{{#dashboard-module label='Welcome to Riak Explorer'}}
+  <p>Select a cluster from the nav bar on the left to view cluser information</p>
+  <p>View the {{link-to 'Explorer API' 'explorer_api'}}</p>
+{{/dashboard-module}}
