--- a/app/templates/riak-ping.hbs
+++ b/app/templates/riak-ping.hbs
@@ -1,10 +1,10 @@
 <div class='view-header'>
   {{breadcrumb-component
   clusterId=clusterId
-  pageTitle=node_id}}
+  pageTitle=nodeId}}
   {{view-label
   pre-label='Node Stats'
-  label=node_id}}
+  label=nodeId}}
 </div>
 
 {{#dashboard-module}}
@@ -12,7 +12,7 @@
     <tbody>
     <tr>
       <td class='key'>Node id:</td>
-      <td class='value'>{{node_id}}</td>
+      <td class='value'>{{nodeId}}</td>
     </tr>
     <tr>
       <td class='key'>Riak Ping:</td>
