Map view template

--- a/app/templates/components/object-contents-map.hbs
+++ b/app/templates/components/object-contents-map.hbs
@@ -1,9 +1,6 @@
-<div class="container">
+<div class="riak-object">
     <div class="object-contents">
         <div class="object-contents-header">
-            <div class="object-contents-info">
-                Map
-            </div>
             <div class="object-contents-actions">
                 {{object-actions model=model deleteObject="deleteObject"}}
             </div>
