--- a/app/templates/components/object-contents-counter.hbs
+++ b/app/templates/components/object-contents-counter.hbs
@@ -1,44 +1,28 @@
-<div class="container">
-    <div class="object-contents">
-        <div class="object-contents-header">
-            <div class="object-contents-info">
-                Counter
-            </div>
-            <div class="object-contents-actions">
-              {{object-actions model=model deleteObject="deleteObject"}}
-            </div>
-        </div>
-        <div class="object-contents-body">
-          <form class="form-inline">
-              <div class="row">
-                  <div class="col-md-6">
-                      <span class="value-counter">{{model.contentsForDisplay}}</span>
-                  </div>
-                  <div class="col-md-6" style="vertical-align: middle;">
-                      {{input value=model.incrementBy
-                          id='incrementBy' class="form-control input-increment"}}
-
-                      <button type="button" class="btn btn-md btn-primary"
-                              {{action 'incrementCounter' model}}>
-                          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                          Increment</button>
-
-                      <span class="divider">/</span>
-
-                      {{input value=model.decrementBy
-                          id='decrementBy' class="form-control input-increment"}}
-
-                      <button type="button" class="btn btn-md btn-primary"
-                              {{action 'decrementCounter' model}}>
-                          <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-                          Decrement</button>
-                  </div>
-              </div>
-          </form>
-        </div>
-        <div class="object-contents-footer">
-            <strong>Page loaded:</strong> {{model.metadata.dateLoaded}}
-        </div>
-    </div>
-</div>
-<br />
+<table class="key-value-table">
+  <tbody>
+  <tr>
+    <td class="key">Current Value:</td>
+    <td class="value counter-value">{{model.contentsForDisplay}}</td>
+  </tr>
+  <tr>
+    <td class="key">
+      Change Value:
+    </td>
+    <td class="value">
+      <form class="form-inline">
+        <button type="button" class="btn btn-primary" {{action 'decrementCounter' model}}>
+          <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+        </button>
+        {{input value=model.valueChanger id='valueChanger' class="form-control value-changer"}}
+        <button type="button" class="btn btn-primary" {{action 'incrementCounter' model}}>
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        </button>
+      </form>
+    </td>
+  </tr>
+  <tr>
+    <td class="key">Delete Object</td>
+    <td class="value">{{object-actions model=model deleteObject="deleteObject"}}</td>
+  </tr>
+  </tbody>
+</table>
