Fix `quorumRelevant` function and display code
Changed `,` to `<br />` to avoid awkward space before comma.

--- a/app/templates/components/bucket-properties.hbs
+++ b/app/templates/components/bucket-properties.hbs
@@ -21,8 +21,8 @@
     <td class='key'>Quorum:</td>
     <td class='value'>
       N_Val: {{model.props.nVal}}
-      {{#if props.quorumRelevant}}
-        ,
+      {{#if model.props.quorumRelevant}}
+        <br />
         R: {{model.props.quorum.r}}, W: {{model.props.quorum.w}},
         PR: {{model.props.quorum.pr}}, PW: {{model.props.quorum.pw}},
         DW: {{model.props.quorum.dw}}
