Visual tweaks for bucket and bucket type views

--- a/app/templates/components/bucket-properties.hbs
+++ b/app/templates/components/bucket-properties.hbs
@@ -1,12 +1,8 @@
 <table class='key-value-table'>
   <tr>
-    <td class='key'>Bucket Status:</td>
+    <td class='key'>Bucket Name:</td>
     <td class='value'>
-      {{#if model.isActive}}
-        <span class="label label-success">Active</span>
-      {{else}}
-        <span class="label label-default">Inactive</span>
-      {{/if}}
+      {{model.name}}
     </td>
   </tr>
   <tr>
