--- a/app/templates/components/link/link-bucket.hbs
+++ b/app/templates/components/link/link-bucket.hbs
@@ -1,5 +1,3 @@
-{{#link-to 'bucket' bucket
-        classNames='btn btn-sm btn-primary btn-block cluster-resource-link' }}
-    <span class="glyphicon glyphicon-folder-close cluster-resource-icon"
-        aria-hidden="true"></span>
-    {{bucket.bucketId}}{{/link-to}}
+{{#link-to 'bucket' bucket }}
+  {{bucket.bucketId}}
+{{/link-to}}
