--- a/app/templates/components/bucket-properties.hbs
+++ b/app/templates/components/bucket-properties.hbs
@@ -34,18 +34,28 @@
       <td class='key'>Search Index:</td>
       <td class='value'>{{model.props.searchIndexName}}</td>
     </tr>
-    <tr>
-      <td class='key'>Search Schema:</td>
-      <td class='value'>
-        <a href="{{model.props.cluster.clusterProxyUrl}}/search/schema/{{model.props.index.schema}}">
-          {{model.props.index.schema}}
-        </a>
-      </td>
-    </tr>
-    <tr>
-      <td class='key'>Index N_Val:</td>
-      <td class='value'>{{model.props.index.n_val}}</td>
-    </tr>
+    {{#if model.index}}
+      <tr>
+        <td class='key'>Search Schema:</td>
+        <td class='value'>
+          <a href="{{model.cluster.proxyUrl}}/search/schema/{{model.index.schema}}">
+            {{model.index.schema}}
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td class='key'>Index N_Val:</td>
+        <td class='value'>{{model.index.n_val}}</td>
+      </tr>
+    {{else}}
+      <tr>
+          <td class='key'></td>
+          <td class='value'>
+            <em>Warning: Index with id <code>{{model.props.searchIndexName}}</code>
+              has not been created on this cluster!</em>
+          </td>
+      </tr>
+    {{/if}}
   {{else}}
     <tr>
       <td class='key'>Search Index:</td>
