Change riak ping label to be correct

--- a/app/templates/riak-ping.hbs
+++ b/app/templates/riak-ping.hbs
@@ -3,7 +3,7 @@
   clusterId=clusterId
   pageTitle=nodeId}}
   {{view-label
-  pre-label='Node Stats'
+  pre-label='Node Ping'
   label=nodeId}}
 </div>
 
