--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -23,6 +23,7 @@
 @import "components/key-value-table";
 @import "components/button-list";
 @import "components/cluster-resource-link";
+@import "components/pagination-component";
 
 // View specific styling
 @import "views/object-counter-container";
