--- a/app/styles/utils/_bootstrap-overrides.scss
+++ b/app/styles/utils/_bootstrap-overrides.scss
@@ -32,6 +32,7 @@
       th {
         padding: 10px 15px;
         border-bottom: 1px;
+        text-align: left;
       }
     }
   }
@@ -41,6 +42,7 @@
       td {
         padding: 10px 15px;
         vertical-align: middle;
+        text-align: left;
       }
     }
   }
