--- a/app/templates/components/link/bucket-type.hbs
+++ b/app/templates/components/link/bucket-type.hbs
@@ -1,5 +1,4 @@
-{{#link-to 'bucket-type' bucketType
-        class='btn btn-sm btn-primary btn-block cluster-resource-link' }}
-    <span class="glyphicon glyphicon-inbox cluster-resource-icon"
-        aria-hidden="true"></span>
-    {{bucketType.bucketTypeId}}{{/link-to}}
+{{#link-to 'bucket-type' bucketType class='cluster-resource-link'}}
+    <span class="glyphicon glyphicon-inbox cluster-resource-icon" aria-hidden="true"></span>
+    {{bucketType.bucketTypeId}}
+{{/link-to}}
