Search index model using Ember Data

--- a/app/templates/components/search-indexes.hbs
+++ b/app/templates/components/search-indexes.hbs
@@ -13,7 +13,7 @@
         <td>
             <a href="{{clusterProxyUrl}}/search/schema/{{index.schema}}">{{index.schema}}</a>
         </td>
-        <td>{{index.n_val}}</td>
+        <td>{{index.nVal}}</td>
     </tr>
 {{else}}
     No indexes found.
