--- a/app/templates/components/search-indexes.hbs
+++ b/app/templates/components/search-indexes.hbs
@@ -1,7 +1,7 @@
 <table class="table">
 <thead>
     <tr>
-        <th>Index Name</th>
+        <th>Index</th>
         <th>Schema</th>
         <th>n_val</th>
     </tr>
@@ -9,10 +9,8 @@
 <tbody>
 {{#each indexes as |index|}}
     <tr>
-        <td>{{index.name}}</td>
-        <td>
-            <a href="{{clusterProxyUrl}}/search/schema/{{index.schema}}">{{index.schema}}</a>
-        </td>
+        <td>{{link.link-index searchIndex=index}}</td>
+        <td><a href={{index.schemaUrl}}>{{index.schema}}</a></td>
         <td>{{index.nVal}}</td>
     </tr>
 {{else}}
