Fix cache refresh loop in production mode clusters (#53)
Fixes bug #53.

--- a/app/templates/components/loading-spinner.hbs
+++ b/app/templates/components/loading-spinner.hbs
@@ -1,3 +1,7 @@
+{{#if statusMessage}}
+<div class="text-center">{{statusMessage}}</div>
+{{/if}}
+
 <div class="spinner">
   <div class="double-bounce1"></div>
   <div class="double-bounce2"></div>
