--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,6 +24,7 @@
 @import "components/button-list";
 @import "components/cluster-resource-link";
 @import "components/pagination-component";
+@import "components/schema-actions";
 
 // View specific styling
 @import "views/object-counter-container";
