Move empty bucket list init to model from setupController (#53)
Addressing Paul's comments on PR #54.
Also removes obsolete/unused component, `bucket-properties-overview.hbs`.

--- a/app/templates/components/bucket-properties.hbs
+++ b/app/templates/components/bucket-properties.hbs
@@ -37,7 +37,7 @@
                     {{model.index.name}}
                 {{/link-to}}
             {{else}}
-                Not available (not being indexed)
+                n/a (not being indexed)
             {{/if}}
         </td>
     </tr>
