--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,6 +25,8 @@
 @import "components/cluster-resource-link";
 @import "components/pagination-component";
 @import "components/schema-actions";
+@import "components/code-highlter";
+@import "components/content-editable";
 
 // View specific styling
 @import "views/object-counter-container";
