--- a/app/styles/components/_schema-actions.scss
+++ b/app/styles/components/_schema-actions.scss
@@ -19,4 +19,12 @@
   .update {
     @extend .btn-primary;
   }
+
+  .create {
+    @extend .btn-primary;
+  }
+
+  .raw {
+    @extend .btn-primary;
+  }
 }
