--- a/app/templates/components/search-indexes.hbs
+++ b/app/templates/components/search-indexes.hbs
@@ -11,7 +11,7 @@
     <tr>
         <td>{{link.link-index searchIndex=index}}</td>
         <td>
-            {{#link-to 'search-schema' index.cluster.id index.schema.name}}
+            {{#link-to 'search-schema' index.cluster.id index.schema.name class='btn btn-small btn-primary'}}
                 {{index.schema.name}}
             {{/link-to}}
         </td>
