Node config view

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -27,6 +27,7 @@
 @import "components/schema-actions";
 @import "components/code-highlter";
 @import "components/content-editable";
+@import "components/code-list";
 
 // View specific styling
 @import "views/object-counter-container";
