--- a/app/styles/components/_em-tabs.scss
+++ b/app/styles/components/_em-tabs.scss
@@ -9,6 +9,7 @@
       cursor: pointer;
       font-weight: bold;
       color: $branding-color-1;
+      border: none;
 
       &[active=true] {
         cursor: default;
