Updated Sidebar navigation. Cluster selector and cluster-subsections.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,6 @@
 // Vendor
 @import "../../vendor/bootstrap-sass/stylesheets/bootstrap";
+@import "ember-power-select";
 // Utils
 @import "utils/variables";
 @import "utils/mixins";
