--- a/app/styles/utils/_bootstrap-overrides.scss
+++ b/app/styles/utils/_bootstrap-overrides.scss
@@ -10,6 +10,11 @@
 .glyphicon {
   margin-right: 2px;
   top: 2px;
+
+  &.glyphicon-spin {
+    -webkit-animation: spin 1000ms infinite linear;
+    animation: spin 1000ms infinite linear;
+  }
 }
 
 .btn-primary {
