Config file resource created. Browse config files implemented through UI.

--- a/app/templates/components/breadcrumb-component.hbs
+++ b/app/templates/components/breadcrumb-component.hbs
@@ -22,6 +22,9 @@
     {{#if logId}}
       <li>{{link-to logId 'log-file' clusterId nodeId logId}}</li>
     {{/if}}
+    {{#if configId}}
+      <li>{{link-to configId 'config-file' clusterId nodeId configId}}</li>
+    {{/if}}
   {{/if}}
 
   {{#if isClusterQuery}}
