Calculate cluster status and displayed in UI

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -26,6 +26,7 @@
 @import "components/code-highlighter";
 @import "components/content-editable";
 @import "components/code-list";
+@import "components/cluster-status";
 // View specific styling
 @import "views/object-counter-container";
 @import "views/loading-container";
