Layout now using flexbox

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,7 @@
 @import "utils/bootstrap-overrides";
 @import "utils/base";
 // Layout
+@import "layout/app-panel";
 @import "layout/topbar-panel";
 @import "layout/wrapper-panel";
 @import "layout/sidebar-panel";
