--- a/app/templates/topbar.hbs
+++ b/app/templates/topbar.hbs
@@ -3,21 +3,19 @@
     <img src="assets/images/sample_logo.png">
   {{/link-to}}
 
-  <nav class="topbar-nav">
-    <ul class="topbar-nav-group">
-      <li class="topbar-nav-item">
-        {{#link-to 'application'}}
-          <span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>
-          Some Item
-        {{/link-to}}
+  <ul class="topbar-nav">
+    <li class="topbar-nav-item">
+      {{#link-to 'application'}}
+        <span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>
+        Some Item
+      {{/link-to}}
 
-      </li>
-      <li class="topbar-nav-item">
-        {{#link-to 'application'}}
-          <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-          Authz User
-        {{/link-to}}
-      </li>
-    </ul>
-  </nav>
+    </li>
+    <li class="topbar-nav-item">
+      {{#link-to 'application'}}
+        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+        Authz User
+      {{/link-to}}
+    </li>
+  </ul>
 </nav>
