--- a/app/styles/layout/_results-panel.scss
+++ b/app/styles/layout/_results-panel.scss
@@ -1,13 +1,21 @@
 .results-panel {
-  position: absolute;
-  top: $topbar-panel-height;
-  left: $sidebar-panel-width;
-  right: 0;
-  bottom: 0;
-  overflow: scroll;
+  @include flex(1);
+  @include flexbox;
+  @include flex-direction(column);
+  min-height: 0;
 
-  .results-panel-inner {
-    position: relative;
-    display: block;
+  .view-header {
+    @include flex(none);
+    background-color: rgba(0, 0, 0, 0.03);
+    border-bottom: 1px solid $grayscale-color-x-light;
+    padding: 20px 40px;
+  }
+
+  .view-body {
+    @include flex(1);
+    height: 100%;
+    overflow-y: auto;
   }
 }
+
+
