--- a/app/styles/utils/_mixins.scss
+++ b/app/styles/utils/_mixins.scss
@@ -1,3 +1,5 @@
+@import "../../../vendor/sass-flex-mixin/flexbox";
+
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
